tests/_resources/error_gcns/E010_invalid_time_index.gcn
# Error: Invalid time index (not a number or ss)
block CAPITAL
{
    identities
    {
        K[abc] = I[];
    };
};
